# vlc4sfml

./: .clang-format  .gitignore  CMakeLists.txt  Doxyfile  LICENSE  README.md
examples/: CMakeLists.txt  example.cpp
include/: vlc4sfml.h
include/vlc4sfml/: video.h
script/: clang-tidy  debug_build  release_build
src/: CMakeLists.txt  video.cpp
