project(vlc4sfml VERSION 0.1)

set(CMAKE_CXX_STANDARD 17)
set(CXX_STANDARD_REQUIRED ON)

set(CMAKE_POSITION_INDEPENDENT_CODE ON)
set(CMAKE_EXPORT_COMPILE_COMMANDS ON)

if(CMAKE_COMPILER_IS_GNUCC OR CMAKE_COMPILER_IS_GNUCXX)
  set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS}
    -Wall -Wno-long-long -pedantic -Werror")
endif()

find_package(SFML 2.2 COMPONENTS graphics window system)

if (NOT WIN32)
  find_package(PkgConfig REQUIRED)
  pkg_check_modules(LIBVLC libvlc)
endif()

set(VLC4SFML_INCLUDES "${CMAKE_HOME_DIRECTORY}/include")
list(APPEND VLC4SFML_INCLUDES ${SFML_INCLUDE_DIR})
set(VLC4SFML_INCLUDE_DIRS ${VLC4SFML_INCLUDES}
  CACHE INTERNAL "VLC4SFML_INCLUDE_DIRS")

message(STATUS "VLC4SFML_INCLUDE_DIRS: ${VLC4SFML_INCLUDE_DIRS}")

include_directories(
  ${VLC4SFML_INCLUDE_DIRS}
  ${LIBVLC_INCLUDE_DIR}
)

file(GLOB CPP_FILES *.cpp)
file(GLOB H_FILES include/project/*.h)

message(STATUS "CPP_FILES: ${CPP_FILES}")
message(STATUS "H_FILES: ${H_FILES}")

add_library(${PROJECT_NAME} STATIC ${CPP_FILES} ${H_FILES})

set(VLC4SFML_DEPENDENCY ${SFML_LIBRARIES})
list(APPEND VLC4SFML_DEPENDENCY ${SFML_DEPENDENCIES})
list(APPEND VLC4SFML_DEPENDENCY ${LIBVLC_LIBRARIES})
set(VLC4SFML_DEPENDENCIES ${VLC4SFML_DEPENDENCY}
  CACHE INTERNAL "VLC4SFML_DEPENDENCIES")

message(STATUS "VLC4SFML_DEPENDENCIES: ${VLC4SFML_DEPENDENCIES}")

target_link_libraries(${PROJECT_NAME} ${VLC4SFML_DEPENDENCIES})
